# counterpointer-report

./: README.md  cabal.project  counterpointer.cabal
app/: Main.hs
src/: Counterpoint.hs  Permute.hs  Scales.hs
