cabal-version:      2.4
name:               counterpointer
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Jim Snavely
maintainer:         ludflu@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable counterpointer
    main-is:          Main.hs
    other-modules:   Scales, Permute

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    --build-depends:    base ^>=4.16.4.0
    build-depends:    base
                      ,Euterpea
                      ,modular-arithmetic
                      ,containers
                      ,split
    hs-source-dirs:   app,
                      src
    default-language: Haskell2010
